plugins/mermaid/plugin/src/test/resources/intention/declarations/merge.mermaid
gitGraph
  commit id: "<error descr="Conflicting commit id">123</error>"
  merge <error descr="Unresolved branch">master</error> id: "<error descr="Conflicting commit id">123</error>"